package ar.unlp.agroecologia.modelo;

public enum EstadoInscripcion {
    PENDIENTE,
    CONFIRMADA,
    RECHAZADA
}
