package ar.unlp.agroecologia.modelo;

public enum MetodoPago {
    TRANSFERENCIA,
    TARJETA,
    EFECTIVO
}
