package ar.unlp.agroecologia.modelo;

public enum Rol {
    PARTICIPANTE,
    AUTOR,
    EVALUADOR,
    ORGANIZADOR_CIENTIFICO,
    ADMINISTRADOR
}
