@startuml
skinparam classAttributeIconSize 0
title V Congreso Agroecologia - Diagrama de clases UML (corregido final)

package "Usuarios" {
  enum Rol {
    PARTICIPANTE
    AUTOR
    EVALUADOR
    ORGANIZADOR_CIENTIFICO
    ADMINISTRADOR
  }

  class Usuario {
    -id: UUID
    -nombre: String
    -apellido: String
    -email: String
    -activo: boolean
    -roles: Set<Rol>
    +agregarRol(rol: Rol): void
    +quitarRol(rol: Rol): void
    +tieneRol(rol: Rol): boolean
  }

  class Administrador <<rol>>
  class OrganizadorCientifico <<rol>>
  class Evaluador <<rol>>
  class Autor <<rol>>
  class Participante <<rol>>
}

package "Academico" {
  enum TipoTrabajo {
    TRABAJO_CIENTIFICO
    RELATO_DE_EXPERIENCIA
    PROPUESTA_TALLER
  }

  enum EstadoTrabajo {
    BORRADOR
    ENVIADO
    EN_EVALUACION
    APROBADO
    APROBADO_CON_CORRECCIONES
    RECHAZADO
    NOTIFICADO
  }

  enum RecomendacionEvaluacion {
    APROBADO
    APROBADO_CON_CORRECCIONES
    RECHAZADO
  }

  class Trabajo {
    -id: UUID
    -titulo: String
    -resumen: String
    -ejeTematico: String
    -tipo: TipoTrabajo
    -estado: EstadoTrabajo
    -documentoUrl: String
    +enviar(): void
    +pasarAEvaluacion(): void
    +aplicarDecisionFinal(r: RecomendacionEvaluacion): void
    +notificarDecision(): void
  }

  class Evaluacion {
    -id: UUID
    -comentario: String
    -fecha: LocalDateTime
    -recomendacion: RecomendacionEvaluacion
  }

  class AsignacionEvaluacion {
    -id: UUID
    -aceptada: boolean
    -fechaRespuesta: LocalDateTime
    +aceptar(): void
    +rechazar(): void
  }
}

package "Inscripcion y Pagos" {
  enum EstadoInscripcion {
    PENDIENTE
    CONFIRMADA
    RECHAZADA
  }

  enum EstadoPago {
    PENDIENTE
    APROBADO
    RECHAZADO
  }

  enum MetodoPago {
    TRANSFERENCIA
    TARJETA
    EFECTIVO
  }

  class InscripcionCongreso {
    -id: UUID
    -categoria: String
    -estado: EstadoInscripcion
    -fechaSolicitud: LocalDateTime
    -motivoRechazo: String
    +confirmar(): void
    +rechazar(motivo: String): void
  }

  class Pago {
    -id: UUID
    -monto: BigDecimal
    -metodo: MetodoPago
    -estado: EstadoPago
    -requiereFactura: boolean
    -comprobanteUrl: String
    -qrAcreditacion: String
    +aprobar(qr: String): void
    +rechazar(motivo: String): void
    +reintentar(): void
  }
}

package "Agenda y Congreso" {
  enum EtapaProceso {
    ENVIO_TRABAJOS
    EVALUACION
    NOTIFICACION
    PAGO_TEMPRANO
  }

  class RangoFechas {
    -desde: LocalDate
    -hasta: LocalDate
    +contiene(fecha: LocalDate): boolean
  }

  class Congreso {
    -nombre: String
    -edicion: String
    +definirEtapa(etapa: EtapaProceso, desde: LocalDate, hasta: LocalDate): void
    +estaEtapaHabilitada(etapa: EtapaProceso, fecha: LocalDate): boolean
  }

  class Actividad {
    -id: UUID
    -titulo: String
    -tipo: String
    -aula: String
    -inicio: LocalDateTime
    -fin: LocalDateTime
    +seSuperponeCon(otra: Actividad): boolean
  }

  class CronogramaPersonal {
    +agregarActividad(a: Actividad): void
    +quitarActividad(a: Actividad): void
  }
}

package "Comunicaciones" {
  enum CanalNotificacion {
    INTERNA
    EMAIL
  }

  class Notificacion {
    -id: UUID
    -asunto: String
    -mensaje: String
    -canal: CanalNotificacion
    -leida: boolean
    +marcarLeida(): void
  }

  class EnvioEmail {
    -id: UUID
    -destinatario: String
    -asunto: String
    -cuerpo: String
    -enviado: boolean
    -error: String
    +marcarEnviado(): void
    +marcarError(error: String): void
  }

  class PlantillaEmail {
    -id: UUID
    -nombre: String
    -asunto: String
    -cuerpo: String
    +renderizar(titulo: String, estado: String): String
  }

  class Circular
  class Anuncio
  class Certificado
}

' Relaciones de dominio
Usuario "1" -- "0..2" Trabajo : autor >
Trabajo "1" -- "0..*" Evaluacion
Usuario "1" -- "0..*" Evaluacion : evaluador >
Usuario "1" -- "0..*" AsignacionEvaluacion : OC asigna >
AsignacionEvaluacion "*" -- "1" Trabajo
AsignacionEvaluacion "*" -- "1" Usuario : evaluador

Usuario "1" -- "0..1" InscripcionCongreso : participante >
InscripcionCongreso "1" -- "0..1" Pago
Usuario "1" -- "0..*" Pago : realiza >

Usuario "1" *-- "1" CronogramaPersonal
CronogramaPersonal "1" *-- "0..*" Actividad

Congreso "1" *-- "1..*" RangoFechas
Congreso "1" -- "0..*" Actividad

Notificacion "*" --> "1" Usuario : destinatario
Certificado "*" --> "1" Usuario : destinatario

' Vista de perfiles (solo para claridad funcional)
Usuario .. Administrador : puede asumir
Usuario .. OrganizadorCientifico : puede asumir
Usuario .. Evaluador : puede asumir
Usuario .. Autor : puede asumir
Usuario .. Participante : rol base

Administrador .. InscripcionCongreso : valida
Administrador .. Pago : aprueba/rechaza
Administrador .. Actividad : administra
Administrador .. Circular : publica
Administrador .. Anuncio : publica
Administrador .. Certificado : gestiona
Administrador .. PlantillaEmail : configura

OrganizadorCientifico .. AsignacionEvaluacion : asigna/desasigna
OrganizadorCientifico .. Trabajo : decide estado final
OrganizadorCientifico .. EnvioEmail : comunica

Evaluador .. Evaluacion : completa formulario
Autor .. Trabajo : crea/edita/envia
Participante .. CronogramaPersonal : arma agenda
Participante .. InscripcionCongreso : solicita

note right of Usuario
Roles dinamicos en la misma cuenta.
Un usuario puede tener multiples roles
y cambiar de perfil durante la sesion.
end note

note bottom of Trabajo
Regla de negocio:
si Usuario con rol PARTICIPANTE envia un Trabajo,
se agrega automaticamente el rol AUTOR.
Limite: maximo 2 trabajos por autor.
end note

note right of Evaluacion
Evaluacion a ciegas:
el evaluador no visualiza
datos de autor en el proceso.
end note

@enduml
